2004-12-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* include/u_mem.h: prototype for strdup with MPW

2004-12-17  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/state.c: open autosave file for writing, not reading

	* main/game.c, main/gamecntl.c, main/gameseq.c, main/multi.c,
	main/state.c, main/state.h: added fast save

	* main/gameseq.c, main/inferno.c: force gr_update() so screens
	always show in OpenGL

	* 2d/font.c, 3d/rod.c: fix compiler errors in MPW w/o OpenGL

	* misc/strutil.c: Implement strdup for MPW

	* D2X.make, arch/carbon/conf.h: compile as a classic powerpc app
	in MPW

	* misc/strutil.c: fix MPW compiler errors

	* main/mission.c, main/mission.h: allocate mission filenames
	dynamically

2004-12-07  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* 2d/font.c: Initialise the dataptr member correctly.

	* include/mono.h: Print only mildly interesting messages to
	stderr.txt. (revert earlier carbon changes)

2004-12-05  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* include/physfsx.h: getRealPath uses the write directory if it
	can't get the real directory

	* D2X.make: remove misc/d_io.c

2004-12-03  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, include/physfsx.h: use PATH_MAX for hog
	pathname, ensure correct translation of path separators

2004-12-03  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* misc/strutil.c: fix stricmp and strnicmp

	* main/mission.c: set builtin_hogsize to 0 for the Descent 1 built
	in mission

2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/physfsx.h: use sprintf in PHYSFSX_getRealPath() because
	I couldn't figure out why the previous code kept segfaulting under
	linux.

	* main/kconfig.c: disable call to reset_cockpit() which was
	causing the "letterbox" bug

	* main/inferno.c: don't die if title screens not found

2004-12-02  Martin Schaffner  <maschaffner@gmx.ch>

	* configure.ac: require PhysicsFS header and library

2004-12-02  Chris Taylor  <c.taylor@student.curtin.edu.au>
